--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1>mudanças climáticas e a sociedade, de quem é a responsabilidade?</h1>
+    <h1>Peste Negra:</h1>
 </header>
 
 <nav>
